--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
             Se você gosta de passar raiva, se informar e relaxar um pouco, talvez você também goste de: <a href="https://ge.globo.com/">GloboEsporte</a>, <a href="https://www.tecmundo.com.br/">Tecmundo</a> e <a href="https://agar.io/">Agar.io</a>
         </p>
 
-        <div id="btnVoltar"><a href="main.html">voltar</a></div>
+        <div id="btnVoltar"><a href="index.html">voltar</a></div>
     </section>
 </body>
 </html>
