--- a/sobre.html
+++ b/sobre.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="author" content="Ruben Fontes">
+    <meta name="description" content="Work from the internet discipline II (UFPB).">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>John Wick</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #1d1d1d;">
-    <section class="pagSobre">
-        <h2>Hi!&#x1F44B;</h2>
+<body style="background-color: #1f2124;">
 
-        <h3>Eu sou Ruben</h3>
+    <section class="sectionSobre">
+        <h2>Eu sou Ruben&#x1F44B;</h2>
         <img id="gif" src="assets/gif.gif" alt="">
         <p id="descricao">
-            Futebol, Música, Jogos eletrônicos e um pouco de código são a maior parte de meu dia a dia.<br>
-            Se você gosta de passar raiva, se informar e relaxar um pouco, talvez você também goste de: <a href="https://ge.globo.com/">GloboEsporte</a>, <a href="https://www.tecmundo.com.br/">Tecmundo</a> e <a href="https://agar.io/">Agar.io</a>
+            Gosto de futebol, emuladores e costumo ouvir música/podcast o dia inteiro<br>
+            Meus sites favoritos são: <a href="https://ge.globo.com/">GloboEsporte</a>, <a href="https://www.tecmundo.com.br/">Tecmundo</a> e <a href="https://www.youtube.com/">YouTube</a>
         </p>
 
-        <div id="btnVoltar"><a href="index.html">voltar</a></div>
+        <div id="btnVoltar">
+            <a href="index.html">voltar</a>
+        </div>
     </section>
+
 </body>
 </html>
