--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </article>
         <article class="articleHabili">
             <h3>Habilidades</h3>
-            <p class="phabilidades"> <!--Aqui seria uma lista mas enfrentei problemas de posicionamento-->>
+            <p class="phabilidades"> <!--Aqui seria uma lista mas enfrentei problemas de posicionamento-->
                 Força<br>
                 Velocidade<br>
                 Agilidade<br>
