--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="sectionPersonagem" id="Personagem">
         <h2 class="pPersonagem">Sobre o personagem</h2>
         <article>
-            <h3>Objetivo</h3>
+            <h3 id="idObj">Objetivo</h3>
             <p>
                 A história se concentra na figura de John Wick, um lendário assassino de elite, apelidado de Baba Yaga (ou “Boogeyman”) buscando vingança pelo roubo de seu carro e a morte de seu cachorro que foi um presente de sua esposa recentemente falecida.<br><br>
 
@@ -51,14 +51,12 @@
 
                 Porém mesmo estando inativo e vivendo uma vida pacífica, John decide voltar à ativa para se vingar de Iosef Tarasov (que é filho de Viggo Tarasov) após ter sua casa invadida e ser obrigado a ver seu cachorro ser cruelmente morto por ele.<br><br>
             </p>
+            <h3 id="idCarac">Características</h3>
+            <p class="pcaracteristicas">Função: Assassino<br>Apelido: Baba Yaga<br>Nacionalidade: Americano<br>Linguagem: Inglês, Russo e Italiano<br>Idade: 46<br>Cor do cabelo: Preta<br>Cor do olho: Verde<br>Etnia: Caucasiano<br></p>
         </article>
     </section>
     <!--Column-->
     <section class="container">
-        <article class="articleCarac">
-            <h3>Características</h3>
-            <p class="pcaracteristicas">Função: Assassino<br>Apelido: Baba Yaga<br>Nacionalidade: Americano<br>Linguagem: Inglês, Russo e Italiano<br>Idade: 46<br>Cor do cabelo: Preta<br>Cor do olho: Verde<br>Etnia: Caucasiano<br></p>
-        </article>
         <article class="articleQuali">
             <h3>Qualidades x Defeitos</h3>
             <p class="pqualidades">
@@ -66,6 +64,7 @@
                 Reflexos x Idade<br>
                 Artes maciais x Humano<br>
                 Exímio atirador<br>
+                Furtividade
             </p>
         </article>
         <article class="articleHabili">
@@ -76,7 +75,6 @@
                 Agilidade<br>
                 Resistência<br>
                 Luta<br>
-                Furtividade<br>
                 Piloto<br>
                 Poliglota<br>
             </p>
