--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
         <h2>Eu sou Ruben&#x1F44B;</h2>
         <img id="gif" src="assets/gif.gif" alt="">
         <p id="descricao">
-            Gosto de futebol, emuladores e costumo ouvir música/podcast o dia inteiro<br>
+            Gosto de futebol, emuladores e costumo ouvir música/podcast o dia inteiro.<br>
             Meus sites favoritos são: <a href="https://ge.globo.com/">GloboEsporte</a>, <a href="https://www.tecmundo.com.br/">Tecmundo</a> e <a href="https://www.youtube.com/">YouTube</a>
         </p>
 
