--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </section>
     <!--Personagem page-->
     <section class="sectionPersonagem" id="Personagem">
-        <h2 class="pPersonagem">Sobre o personagem</h2>
+        <h2 class="h2Personagem">Sobre o personagem</h2>
         <article>
             <h3 id="idObj">Objetivo</h3>
             <p>
