--- a/index.html
+++ b/index.html
@@ -71,12 +71,10 @@
             <h3>Habilidades</h3>
             <p class="phabilidades"> <!--Aqui seria uma lista mas enfrentei problemas de posicionamento-->
                 Força<br>
-                Velocidade<br>
                 Agilidade<br>
                 Resistência<br>
                 Luta<br>
-                Piloto<br>
-                Poliglota<br>
+                Poliglotismo<br>
             </p>
         </article>
     </section>
