--- a/sobre.html
+++ b/sobre.html
@@ -9,7 +9,7 @@
     <title>John Wick</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #1f2124;">
+<body style="background-color: rgb(27, 27, 27);">
 
     <section class="sectionSobre">
         <h2>Eu sou Ruben&#x1F44B;</h2>
