--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     <main>
         <section class="main">
             <h1>JOHN WICK</h1>
-        </section>
+            <a href="#Biografia">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                </svg>
+            </a>
     </main>
     <!--Biografia page-->
     <section class="sectionBio" id="Biografia">
@@ -36,12 +40,13 @@
 
                 Um dia, Jonh Wick conheceu uma mulher chamada Helen e se apaixonou por ela, o que o fez tomar a decisão de abandonar a vida de assassino. Viggo Tarasov só aceitou a aposentadoria do protagonista se ele conseguisse matar todos os seus rivais em um único dia. Para isso, Wick pediu a ajuda do criminoso Santino D’Antonio, que em troca, exigiu um pacto de sangue com o assassino. O protagonista conseguiu completar a missão e Tarasov lhe deu sua tão desejada aposentadoria.<br><br>
 
-                Para o azar de John Wick, não demorou muito para Helen adoecer e morrer. Como forma de lidar com a perda, ela deu para o marido Daisy, uma cachorrinha da raça Beagle.John Wick e Daisy se tornaram muito próximos, mas a cachorra foi morta por Iosef Tarasov, filho de Viggo, que queria roubar o carro do protagonista. Cheio de raiva pelo o que aconteceu, Wick decidiu voltar à ativa para se vingar.<br><br>
+                Para o azar, não demorou muito para Helen adoecer e morrer. Como forma de lidar com a perda, ela deu para o marido Daisy, uma cachorrinha da raça Beagle.John Wick e Daisy se tornaram muito próximos, mas a cachorra foi morta por Iosef Tarasov, filho de Viggo, que queria roubar o carro do protagonista. Cheio de raiva pelo o que aconteceu, Wick decidiu voltar à ativa para se vingar.<br><br>
         </article>
     </section>
+    <hr>
     <!--Personagem page-->
     <section class="sectionPersonagem" id="Personagem">
-        <h2 class="h2Personagem">Sobre o personagem</h2>
+        <h2 class="h2Personagem">Personagem</h2>
         <article>
             <h3 id="idObj">Objetivo</h3>
             <p>
@@ -53,34 +58,38 @@
             </p>
             <h3 id="idCarac">Características</h3>
             <p class="pcaracteristicas">Função: Assassino<br>Apelido: Baba Yaga<br>Nacionalidade: Americano<br>Linguagem: Inglês, Russo e Italiano<br>Idade: 46<br>Cor do cabelo: Preta<br>Cor do olho: Verde<br>Etnia: Caucasiano<br></p>
+            <h3 id="idHabili">Habilidades</h3>
+            <p>Força<br>Agilidade<br>Resistência<br>Luta<br>Poliglotismo<br></p>
         </article>
     </section>
     <!--Column-->
-    <section class="container">
-        <article class="articleQuali">
-            <h3>Qualidades x Defeitos</h3>
-            <p class="pqualidades">
-                Recuperação x Mortalidade<br>
-                Reflexos x Idade<br>
-                Artes maciais x Humano<br>
-                Exímio atirador<br>
-                Furtividade
-            </p>
-        </article>
-        <article class="articleHabili">
-            <h3>Habilidades</h3>
-            <p class="phabilidades"> <!--Aqui seria uma lista mas enfrentei problemas de posicionamento-->
-                Força<br>
-                Agilidade<br>
-                Resistência<br>
-                Luta<br>
-                Poliglotismo<br>
-            </p>
-        </article>
-    </section>
+        <section class="container">
+            <article class="articleQuali">
+                <h3>Qualidades</h3>
+                <p class="pqualidades">
+                    Sobrevivência<br>
+                    Reflexos<br>
+                    Artes maciais<br>
+                    Exímio atirador<br>
+                    Furtividade
+                </p>
+            </article>
+            <hr>
+            <article class="articleDefeitos">
+                <h3>Defeitos</h3>
+                    <p class="pdefeitos">
+                        Desleixado<br>
+                        Problemas psicológicos<br>
+                        Velocidade<br>
+                        Mortalidade<br>
+                        Tamanho<br>
+                    </p>
+            </article>
+        </section>
+        <hr>
     <!--Footer-->
     <footer>
-        John Wick&trade; | design & code by&nbsp;<a href="https://t.me/rubengcf">Ruben Fontes</a>
+        John Wick&trade;&nbsp;| design & code by&nbsp;<a href="https://t.me/rubengcf">Ruben Fontes</a>
     </footer>
 
 </body>
