--- a/sobre.html
+++ b/sobre.html
@@ -9,10 +9,10 @@
     <title>John Wick</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: rgb(27, 27, 27);">
+<body style="background-color: #070707;">
 
     <section class="sectionSobre">
-        <h2>Eu sou Ruben&#x1F44B;</h2>
+        <h2 id="titleSobre">Eu sou Ruben&#x1F44B;</h2>
         <img id="gif" src="assets/gif.gif" alt="">
         <p id="descricao">
             Gosto de futebol, emuladores e costumo ouvir música/podcast o dia inteiro.<br>
