--- a/index.html
+++ b/index.html
@@ -88,18 +88,22 @@
         </section>
         <hr>
         <section class="secGosta" id="Mais">
-            <h2>O que curte fazer</h2>
-            <p>Daisy foi o animal de estimação de John Wick, que a ganhou como presente póstumo de Helen Wick, sua esposa falecida. John desenvolveu uma relação muito particular com o animal, gostava dele, brincava e até levava para as missões</p>
-            <img src="assets/dog.jpg" class="imgDog" alt="">
-            <p id="pGosta">Depois de perder Daisy, John Wick adota um pitbull – que ainda não tem nome. Esse pitbull foi interpretado por dois cães diferentes, um chamado Burton e outro chamado Cha Cha</p>
+            <article>
+                <h2>O que curte fazer</h2>
+                <p>Daisy foi o animal de estimação de John Wick, que a ganhou como presente póstumo de Helen Wick, sua esposa falecida. John desenvolveu uma relação muito particular com o animal, gostava dele, brincava e até levava para as missões</p>
+                <img src="assets/dog.jpg" class="imgDog" alt="">
+                <p>Depois de perder Daisy, John Wick adota um pitbull – que ainda não tem nome. Esse pitbull foi interpretado por dois cães diferentes, um chamado Burton e outro chamado Cha Cha</p>
+            </article>
         </section>
         <section class="secSites">
-            <h2>Site favoritos</h2>
-            <p class="pSites">
-                <a href="https://www.netflix.com/vn-en/title/80013762">Netflix</a>
-                <a href="https://www.imdb.com/title/tt2911666/">IMDb</a>
-                <a href="https://www.youtube.com/watch?v=IaCjKkrAW4k">Trailer</a>
-            </p>
+            <article>
+                <h2>Site favoritos</h2>
+                <p class="pSites">
+                    <a href="https://www.netflix.com/vn-en/title/80013762">Netflix</a>
+                    <a href="https://www.imdb.com/title/tt2911666/">IMDb</a>
+                    <a href="https://www.youtube.com/watch?v=IaCjKkrAW4k">Trailer</a>
+                </p>
+            </article>
         </section>
         <hr>
     <!--Footer-->
