--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
     <!--Header-->
     <header>
         <nav class="navbar">
-            <a href="#Biografia" id="idBio">Biografia</a>
-            <a href="#Personagem" id="idPersonagem">Personagem</a>
-            <a href="#Mais" id="idSobre">Mais</a>    
+            <ul>
+                <li><a href="#Biografia" id="idBio">Biografia</a></li>
+                <li><a href="#Personagem" id="idPersonagem">Personagem</a></li>
+                <li><a href="#Mais" id="idSobre">Mais</a></li>
+            </ul>
         </nav>
     </header>
-    <!--Main content (home)-->
+
     <main>
         <section class="main">
             <h1>JOHN WICK</h1>
             <a href="#Biografia">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
                 </svg>
             </a>
     </main>
+
     <!--Biografia page-->
     <section class="sectionBio" id="Biografia">
         <article>
@@ -43,11 +45,13 @@
                 Para o azar, não demorou muito para Helen adoecer e morrer. Como forma de lidar com a perda, ela deu para o marido Daisy, uma cachorrinha da raça Beagle.John Wick e Daisy se tornaram muito próximos, mas a cachorra foi morta por Iosef Tarasov, filho de Viggo, que queria roubar o carro do protagonista. Cheio de raiva pelo o que aconteceu, Wick decidiu voltar à ativa para se vingar.<br><br>
         </article>
     </section>
+
     <hr>
+
     <!--Personagem page-->
     <section class="sectionPersonagem" id="Personagem">
-        <h2 class="h2Personagem">Personagem</h2>
         <article>
+            <h2 class="h2Personagem">Personagem</h2>
             <h3 id="idObj">Objetivo</h3>
             <p>
                 A história se concentra na figura de John Wick, um lendário assassino de elite, apelidado de Baba Yaga (ou “Boogeyman”) buscando vingança pelo roubo de seu carro e a morte de seu cachorro que foi um presente de sua esposa recentemente falecida.<br><br>
@@ -62,7 +66,7 @@
             <p>Força<br>Agilidade<br>Resistência<br>Luta<br>Poliglotismo<br></p>
         </article>
     </section>
-    <!--Column-->
+    <!--Container-->
         <section class="container">
             <article class="articleQuali">
                 <h3>Qualidades</h3>
@@ -97,12 +101,12 @@
         </section>
         <section class="secSites">
             <article>
-                <h2>Site favoritos</h2>
-                <p class="pSites">
-                    <a href="https://www.netflix.com/vn-en/title/80013762">Netflix</a>
-                    <a href="https://www.imdb.com/title/tt2911666/">IMDb</a>
-                    <a href="https://www.youtube.com/watch?v=IaCjKkrAW4k">Trailer</a>
-                </p>
+                <h2>Sites favoritos</h2>
+                   <ul class="ulSites">
+                       <li><a href="https://www.netflix.com/vn-en/title/80013762">Netflix</a></li>
+                       <li><a href="https://www.imdb.com/title/tt2911666/">IMDb</a></li>
+                       <li><a href="https://www.youtube.com/watch?v=IaCjKkrAW4k">Trailer</a></li>
+                   </ul>
             </article>
         </section>
         <hr>
