--- a/index.html
+++ b/index.html
@@ -11,109 +11,111 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!--Header-->
-    <header>
-        <nav class="navbar">
-            <ul>
-                <li><a href="#Biografia" id="idBio">Biografia</a></li>
-                <li><a href="#Personagem" id="idPersonagem">Personagem</a></li>
-                <li><a href="#Mais" id="idSobre">Mais</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="wrapper">
+        <!--Header-->
+        <header>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#Biografia" id="idBio">Biografia</a></li>
+                    <li><a href="#Personagem" id="idPersonagem">Personagem</a></li>
+                    <li><a href="#Mais" id="idSobre">Mais</a></li>
+                </ul>
+            </nav>
+        </header>
 
-    <main>
-        <section class="main">
-            <h1>JOHN WICK</h1>
-            <a href="#Biografia">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
-                </svg>
-            </a>
-    </main>
+        <main>
+            <section class="main">
+                <h1>JOHN WICK</h1>
+                <a href="#Biografia">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-arrow-down-square" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M15 2a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2zM0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm8.5 2.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
+                    </svg>
+                </a>
+        </main>
 
-    <!--Biografia page-->
-    <section class="sectionBio" id="Biografia">
-        <article>
-            <h2>Biografia</h2>
-            <p class="pbio"> 
-                O nome real do assassino é Jardani Jovonovich. Ele nasceu na Bielorrússia e era um órfão da tribo de ciganos Ruska Roma até que a Diretora – integrante da Alta Mesa, que abordaremos em breve – o encontrou e decidiu levá-lo para os Estados Unidos, onde se tornou um artista marcial de primeira. Essa informação só foi revelada no terceiro filme da franquia. Após algum tempo, Jardani decidiu adotar o nome de Jonathan Wick, abandonou a Ruska Roma e decidiu servir o exército americano. Foi nesta época que o protagonista conheceu Marcus, seu grande amigo e mentor.<br><br>
-                
-                Após John Wick deixar o exército americano, ele decidiu se aproveitar dos seus conhecimentos para se tornar um assassino profissional.  Rapidamente, ganhou o respeito dos colegas de profissão por conta de sua alta eficiência e recebeu o apelido de Baba Yaga. Não demorou muito para assassino se tornar empregado de Viggo Tarasov, um dos chefes da máfia russa na cidade de Nova York, que contratou o Baba Yaga justamente por sua reputação.<br><br>
+        <!--Biografia page-->
+        <section class="sectionBio" id="Biografia">
+            <article>
+                <h2>Biografia</h2>
+                <p class="pbio"> 
+                    O nome real do assassino é Jardani Jovonovich. Ele nasceu na Bielorrússia e era um órfão da tribo de ciganos Ruska Roma até que a Diretora – integrante da Alta Mesa, que abordaremos em breve – o encontrou e decidiu levá-lo para os Estados Unidos, onde se tornou um artista marcial de primeira. Essa informação só foi revelada no terceiro filme da franquia. Após algum tempo, Jardani decidiu adotar o nome de Jonathan Wick, abandonou a Ruska Roma e decidiu servir o exército americano. Foi nesta época que o protagonista conheceu Marcus, seu grande amigo e mentor.<br><br>
+                    
+                    Após John Wick deixar o exército americano, ele decidiu se aproveitar dos seus conhecimentos para se tornar um assassino profissional.  Rapidamente, ganhou o respeito dos colegas de profissão por conta de sua alta eficiência e recebeu o apelido de Baba Yaga. Não demorou muito para assassino se tornar empregado de Viggo Tarasov, um dos chefes da máfia russa na cidade de Nova York, que contratou o Baba Yaga justamente por sua reputação.<br><br>
 
-                Um dia, Jonh Wick conheceu uma mulher chamada Helen e se apaixonou por ela, o que o fez tomar a decisão de abandonar a vida de assassino. Viggo Tarasov só aceitou a aposentadoria do protagonista se ele conseguisse matar todos os seus rivais em um único dia. Para isso, Wick pediu a ajuda do criminoso Santino D’Antonio, que em troca, exigiu um pacto de sangue com o assassino. O protagonista conseguiu completar a missão e Tarasov lhe deu sua tão desejada aposentadoria.<br><br>
+                    Um dia, Jonh Wick conheceu uma mulher chamada Helen e se apaixonou por ela, o que o fez tomar a decisão de abandonar a vida de assassino. Viggo Tarasov só aceitou a aposentadoria do protagonista se ele conseguisse matar todos os seus rivais em um único dia. Para isso, Wick pediu a ajuda do criminoso Santino D’Antonio, que em troca, exigiu um pacto de sangue com o assassino. O protagonista conseguiu completar a missão e Tarasov lhe deu sua tão desejada aposentadoria.<br><br>
 
-                Para o azar, não demorou muito para Helen adoecer e morrer. Como forma de lidar com a perda, ela deu para o marido Daisy, uma cachorrinha da raça Beagle.John Wick e Daisy se tornaram muito próximos, mas a cachorra foi morta por Iosef Tarasov, filho de Viggo, que queria roubar o carro do protagonista. Cheio de raiva pelo o que aconteceu, Wick decidiu voltar à ativa para se vingar.<br><br>
-        </article>
-    </section>
+                    Para o azar, não demorou muito para Helen adoecer e morrer. Como forma de lidar com a perda, ela deu para o marido Daisy, uma cachorrinha da raça Beagle.John Wick e Daisy se tornaram muito próximos, mas a cachorra foi morta por Iosef Tarasov, filho de Viggo, que queria roubar o carro do protagonista. Cheio de raiva pelo o que aconteceu, Wick decidiu voltar à ativa para se vingar.<br><br>
+            </article>
+        </section>
 
-    <hr>
+        <hr>
 
-    <!--Personagem page-->
-    <section class="sectionPersonagem" id="Personagem">
-        <article>
-            <h2 class="h2Personagem">Personagem</h2>
-            <h3 id="idObj">Objetivo</h3>
-            <p>
-                A história se concentra na figura de John Wick, um lendário assassino de elite, apelidado de Baba Yaga (ou “Boogeyman”) buscando vingança pelo roubo de seu carro e a morte de seu cachorro que foi um presente de sua esposa recentemente falecida.<br><br>
+        <!--Personagem page-->
+        <section class="sectionPersonagem" id="Personagem">
+            <article>
+                <h2>Personagem</h2>
+                <h3 id="idObj">Objetivo</h3>
+                <p>
+                    A história se concentra na figura de John Wick, um lendário assassino de elite, apelidado de Baba Yaga (ou “Boogeyman”) buscando vingança pelo roubo de seu carro e a morte de seu cachorro que foi um presente de sua esposa recentemente falecida.<br><br>
 
-                Wick se aposentou após ter ajudado Viggo Tarasov a ganhar o controle do sindicato do crime russo em Nova York, eliminando sozinho todas as facções oponentes, em uma tarefa que o próprio Tarasov considerava “impossível” de ser cumprida.<br><br>
+                    Wick se aposentou após ter ajudado Viggo Tarasov a ganhar o controle do sindicato do crime russo em Nova York, eliminando sozinho todas as facções oponentes, em uma tarefa que o próprio Tarasov considerava “impossível” de ser cumprida.<br><br>
 
-                Porém mesmo estando inativo e vivendo uma vida pacífica, John decide voltar à ativa para se vingar de Iosef Tarasov (que é filho de Viggo Tarasov) após ter sua casa invadida e ser obrigado a ver seu cachorro ser cruelmente morto por ele.<br><br>
-            </p>
-            <h3 id="idCarac">Características</h3>
-            <p class="pcaracteristicas">Função: Assassino<br>Apelido: Baba Yaga<br>Nacionalidade: Americano<br>Linguagem: Inglês, Russo e Italiano<br>Idade: 46<br>Cor do cabelo: Preta<br>Cor do olho: Verde<br>Etnia: Caucasiano<br></p>
-            <h3 id="idHabili">Habilidades</h3>
-            <p>Força<br>Agilidade<br>Resistência<br>Luta<br>Poliglotismo<br></p>
-        </article>
-    </section>
-    <!--Container-->
-        <section class="container">
-            <article class="articleQuali">
-                <h3>Qualidades</h3>
-                <p class="pqualidades">
-                    Sobrevivência<br>
-                    Reflexos<br>
-                    Artes maciais<br>
-                    Exímio atirador<br>
-                    Furtividade
+                    Porém mesmo estando inativo e vivendo uma vida pacífica, John decide voltar à ativa para se vingar de Iosef Tarasov (que é filho de Viggo Tarasov) após ter sua casa invadida e ser obrigado a ver seu cachorro ser cruelmente morto por ele.<br><br>
                 </p>
+                <h3 id="idCarac">Características</h3>
+                <p class="pcaracteristicas">Função: Assassino<br>Apelido: Baba Yaga<br>Nacionalidade: Americano<br>Linguagem: Inglês, Russo e Italiano<br>Idade: 46<br>Cor do cabelo: Preta<br>Cor do olho: Verde<br>Etnia: Caucasiano<br></p>
+                <h3 id="idHabili">Habilidades</h3>
+                <p>Força<br>Agilidade<br>Resistência<br>Luta<br>Poliglotismo<br></p>
             </article>
-            <hr>
-            <article class="articleDefeitos">
-                <h3>Defeitos</h3>
-                    <p class="pdefeitos">
-                        Desleixado<br>
-                        Problemas psicológicos<br>
-                        Velocidade<br>
-                        Mortalidade<br>
-                        Tamanho<br>
+        </section>
+        <!--Container-->
+            <section class="container">
+                <article class="articleQuali">
+                    <h3>Qualidades</h3>
+                    <p class="pqualidades">
+                        Sobrevivência<br>
+                        Reflexos<br>
+                        Artes maciais<br>
+                        Exímio atirador<br>
+                        Furtividade
                     </p>
-            </article>
-        </section>
-        <hr>
-        <section class="secGosta" id="Mais">
-            <article>
-                <h2>O que curte fazer</h2>
-                <p>Daisy foi o animal de estimação de John Wick, que a ganhou como presente póstumo de Helen Wick, sua esposa falecida. John desenvolveu uma relação muito particular com o animal, gostava dele, brincava e até levava para as missões</p>
-                <img src="assets/dog.jpg" class="imgDog" alt="">
-                <p>Depois de perder Daisy, John Wick adota um pitbull – que ainda não tem nome. Esse pitbull foi interpretado por dois cães diferentes, um chamado Burton e outro chamado Cha Cha</p>
-            </article>
-        </section>
-        <section class="secSites">
-            <article>
-                <h2>Sites favoritos</h2>
-                   <ul class="ulSites">
-                       <li><a href="https://www.netflix.com/vn-en/title/80013762">Netflix</a></li>
-                       <li><a href="https://www.imdb.com/title/tt2911666/">IMDb</a></li>
-                       <li><a href="https://www.youtube.com/watch?v=IaCjKkrAW4k">Trailer</a></li>
-                   </ul>
-            </article>
-        </section>
-        <hr>
-    <!--Footer-->
-    <footer>
-        John Wick&trade;&nbsp;| design & code by&nbsp;<a href="https://t.me/rubengcf">Ruben Fontes</a>
-    </footer>
-
+                </article>
+                <hr>
+                <article class="articleDefeitos">
+                    <h3>Defeitos</h3>
+                        <p class="pdefeitos">
+                            Desleixado<br>
+                            Problemas psicológicos<br>
+                            Velocidade<br>
+                            Mortalidade<br>
+                            Tamanho<br>
+                        </p>
+                </article>
+            </section>
+            <hr>
+            <section class="secGosta" id="Mais">
+                <article>
+                    <h2>O que curte fazer</h2>
+                    <p>Daisy foi o animal de estimação de John Wick, que a ganhou como presente póstumo de Helen Wick, sua esposa falecida. John desenvolveu uma relação muito particular com o animal, gostava dele, brincava e até levava para as missões</p>
+                    <img src="assets/dog.jpg" class="imgDog" alt="">
+                    <p>Depois de perder Daisy, John Wick adota um pitbull – que ainda não tem nome. Esse pitbull foi interpretado por dois cães diferentes, um chamado Burton e outro chamado Cha Cha</p>
+                </article>
+            </section>
+            <section class="secSites">
+                <article>
+                    <h2>Sites favoritos</h2>
+                    <ul class="ulSites">
+                        <li><a href="https://www.netflix.com/vn-en/title/80013762">Netflix</a></li>
+                        <li><a href="https://www.imdb.com/title/tt2911666/">IMDb</a></li>
+                        <li><a href="https://www.youtube.com/watch?v=IaCjKkrAW4k">Trailer</a></li>
+                    </ul>
+                </article>
+            </section>
+            <hr>
+        <!--Footer-->
+        <footer>
+            John Wick&trade;&nbsp;| design & code by&nbsp;<a href="https://t.me/rubengcf">Ruben Fontes</a>
+        </footer>
+    </div>
 </body>
 </html>
+
